--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,7 +36,8 @@ source = ~/.config/hypr/monitors.conf
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --conf ~/.config/wofi/config/config --style ~/.config/wofi/src/frappe/style.css
+# $menu = wofi --conf ~/.config/wofi/config/config --style ~/.config/wofi/src/frappe/style.css
+$menu = fuzzel
 $browser = librewolf
 $password_manager = keepassxc
 
@@ -54,7 +55,7 @@ exec-once = hypridle
 exec-once = kdeconnect-indicator
 exec-once = wl-gammarelay
 exec-once = dunst
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --watch cliphist store # Stores only text data
 exec-once = dropbox & cryptomator
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -71,10 +72,10 @@ env = XDG_MENU_PREFIX,arch-
 env = HYPRSHOT_DIR, /home/abtop/Pictures/Screenshots
 # QT
 env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_STYLE_OVERRIDE,kvantum
+# env = QT_STYLE_OVERRIDE,kvantum
 
 # Toolkit Backend Variables
 env = GDK_BACKEND,wayland,x11,*
