--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,5 @@
-[credential]
-	helper = store
 [init]
 	defaultBranch = main
 [user]
 	email = 124847316+abdiel-sys@users.noreply.github.com
-	name = Abdiel
+	name = Abdiel Mendez
