--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -46,7 +46,7 @@ $menu = hyprlauncher
 exec-once = systemctl --users start hyprpolkitagent
 exec-once = waybar
 exec-once = nm-applet & blueman-applet
-exec-once = hypridle
+exec-once = hypridle & hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -56,7 +56,6 @@ exec-once = hypridle
 
 env = XCURSOR_SIZE,20
 env = HYPRCURSOR_SIZE,20
-
 
 env = QT_QPA_PLATFORM=wayland
 ###################
@@ -85,7 +84,7 @@ env = QT_QPA_PLATFORM=wayland
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 15
 
     border_size = 2
 
@@ -219,7 +218,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -249,13 +248,14 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, I, exec, hyprpicker --autocopy
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move focus with mainMod + h, j, k, l
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
