--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -111,13 +111,14 @@
   "custom/power": {
     "format": "襤",
     "tooltip": false,
-    "menu": "on-click",
-    "menu-file": "$HOME/.config/waybar/custom_modules/power_menu.xml", // Menu file in resources folder
-    "menu-actions": {
-      "shutdown": "shutdown now",
-      "reboot": "reboot",
-      "suspend": "systemctl suspend",
-      "hibernate": "systemctl hibernate"
-    }
+    "on-click": "wlogout",
+    //"menu": "on-click",
+   // "menu-file": "$HOME/.config/waybar/custom_modules/power_menu.xml", // Menu file in resources folder
+   // "menu-actions": {
+    //  "shutdown": "shutdown now",
+    //  "reboot": "reboot",
+    //  "suspend": "systemctl suspend",
+     // "hibernate": "systemctl hibernate"
+   // }
   }
 }
