changes on nvim and hyprland config

--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -250,6 +250,7 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, I, exec, hyprpicker --autocopy
+bind = CONTROLALT, L, exec, hyprlock
 
 # Move focus with mainMod + h, j, k, l
 bind = $mainMod, H, movefocus, l
@@ -292,6 +293,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
+binde = $mainMod, F5, resizeactive, -20 0
+binde = $mainMod, F6, resizeactive, 20 0
+binde = $mainMod, F7, resizeactive, 0 20
+binde = $mainMod, F8, resizeactive, 0 -20
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -300,6 +310,9 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+
+bindel = $mainMod, UP, exec, brightnessctl -e4 -n2 set 5%+
+bindel = $mainMod, DOWN, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
