--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -47,6 +47,7 @@ exec-once = systemctl --users start hyprpolkitagent
 exec-once = waybar
 exec-once = nm-applet & blueman-applet
 exec-once = hypridle & hyprpaper
+exec-once = hyprctl setcursor Bibata-Modern-Ice 20
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -57,7 +58,8 @@ exec-once = hypridle & hyprpaper
 env = XCURSOR_SIZE,20
 env = HYPRCURSOR_SIZE,20
 
-env = QT_QPA_PLATFORM=wayland
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME, qt6ct
 ###################
 ### PERMISSIONS ###
 ###################
