changes on hyprland files

--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -75,7 +75,7 @@
 
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
-    "format": "{icon}  {volume}%",
+    "format": "{icon}{volume}%",
     "format-bluetooth": "{icon}  {volume}% ",
     "format-bluetooth-muted": "  {icon} ",
     "format-muted": " ",
@@ -109,7 +109,7 @@
     "spacing": 12
   },
   "custom/power": {
-    "format": "襤",
+    "format": "⏻",
     "tooltip": false,
     "on-click": "wlogout",
     //"menu": "on-click",
