added keybind to control mpc

--- a/hyprland/hypr/hyprland_conf/keybindings.conf
+++ b/hyprland/hypr/hyprland_conf/keybindings.conf
@@ -104,3 +104,5 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region
 bind = , PRINT, exec, hyprshot -m output
 
+# Scripts
+bind = $mainMod, F, exec, ~/Code/Scripts/dmenu/mpc.sh
