--- a/hyprland/hypr/hyprlock.conf
+++ b/hyprland/hypr/hyprlock.conf
@@ -35,7 +35,7 @@ animations {
 
 background {
     monitor =
-    path = screenshot
+    path = ~/Pictures/Wallpaper/planet-ascii.png
     blur_passes = 3
 }
 
@@ -96,7 +96,7 @@ label {
 
 label {
     monitor =
-    text = $LAYOUT[en,ru]
+    text = $LAYOUT[en,lat]
     font_size = 24
     onclick = hyprctl switchxkblayout all next
 
