--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -194,10 +194,10 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,es
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_space_toggle
     kb_rules =
 
     follow_mouse = 1
