--- a/hyprland/hypr/hyprland_conf/execonce.conf
+++ b/hyprland/hypr/hyprland_conf/execonce.conf
@@ -10,5 +10,6 @@ exec-once = waybar
 exec-once = nm-applet & blueman-applet
 exec-once = hypridle & hyprpaper
 exec-once = hyprctl setcursor Bibata-Modern-Ice 20
+exec-once = kdeconnect-indicator
 
 
