--- a/hyprland/hypr/hyprlock.conf
+++ b/hyprland/hypr/hyprlock.conf
@@ -96,7 +96,7 @@ label {
 
 label {
     monitor =
-    text = $LAYOUT[en,lat]
+    text = $LAYOUT[en,latam]
     font_size = 24
     onclick = hyprctl switchxkblayout all next
 
